--- a/ArenaSquad/ArenaSquad.csproj
+++ b/ArenaSquad/ArenaSquad.csproj
@@ -77,6 +77,7 @@
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
         <Content Include="Data\ContainerIds.txt">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
         <Content Include="Data\CreatureIds.txt">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
